[package]
authors = ["app"]
edition = "2018"
name = "app"
version = "0.1.0"

[dependencies]
embedded-hal = "*"
nb = "*"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
embedded-graphics = "0.8.1"
ssd1306 = "*"
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103"] }
tb6612fng = "0.1"
fugit = "0.3.7"
lite-json = { version = "0.2.0", default-features = false, defaults = [
    "no_std",
] }

[[bin]]
test = false
name = "app"
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
